# hamiltonians

./: .gitignore  CMakeLists.txt  Hamiltonian.cpp  Hamiltonian.hpp  HamiltoniansConfig.cmake.in  Integration.hpp  PoincareSurface.hpp  State.cpp  State.hpp  State2.cpp  State2.hpp  dynamic_system.hpp  line.cpp  line.hpp  main.cpp  observer.cpp  observer.hpp  pendulum_example.cpp
src/Hamiltonians/: CMakeLists.txt
src/Hamiltonians/include/: Hamiltonian.hpp  Integration.hpp  IntegrationTimeInterval.hpp  PoincareSurface.hpp  State.hpp  action_angle.hpp  dynamic_system.hpp  line.hpp  observer.hpp  periodic_q_surface.hpp
src/Hamiltonians/include/details/: periodic_q_distance.hpp
src/Hamiltonians/src/: Hamiltonian.cpp  Integration.cpp  IntegrationTimeInterval.cpp  State.cpp  action_angle.cpp  dynamic_system.cpp  line.cpp  periodic_q_surface.cpp
src/Hamiltonians/src/details/: periodic_q_distance.cpp
src/examples/: CMakeLists.txt  free_particle_example.cpp  main.cpp  pendulum_example.cpp
src/tests/: CMakeLists.txt  periodic_q_surfaceTest.cpp
